deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: bike-service
  labels:
    app: bike-service
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: bike-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike-service
  template:
    metadata:
      labels:
        app: bike-service
        version: v1
    spec:
      containers:
        - name: bike-app
          image: gcr.io/spring-boot-gke-251704/bike-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
